# gmp

./: CMakeLists.txt  Findgmp.cmake  README.md
example/cmake_findpackage_demo/: CMakeLists.txt  main.cpp
